--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </a>
     <button id="toggle-theme">Toggle Theme</button>
   </section>
-  <script src="/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
