Message error changed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <button id="copyPasswordBtn" class="button" style="display: none;">Copy Password</button>
     </div>
     <div id="password"></div>
+    <div id="error"></div>
     <div class="alert-cont">
       <div class="alert">
         <p>These passwords are not saved in any database or
