--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="/style.css">
-  <link rel="icon" type="image/svg+xml" href="/key.svg" />
+  <link rel="shortcut icon" href="/public/key.svg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Generate Password</title>
 </head>
